--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -421,7 +421,8 @@ p {
     margin: 0;
     border: 0;
     margin-left: -360px;
-    float: left; }
+    float: left;
+    width: 100%; }
     #navigation #navbar .in {
       background: #fff;
       border: 0; }
@@ -506,8 +507,7 @@ p {
       margin-top: 0.5em;
       border: 0;
       background: rgba(255, 255, 255, 0.1);
-      padding: 1em;
-      width: 100vh; }
+      padding: 1em; }
 
   .opened {
     height: 600px !important;
