--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  text-align: justify;
-  font-family: 'helvetica' !important; }
+  text-align: justify; }
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
@@ -34,7 +33,7 @@ body {
   width: 100%;
   border-radius: 0;
   font-size: 20px;
-  font-weight: 100;
+  font-weight: 300;
   transition: all .2s ease-in-out;
   z-index: 1000;
   color: #fff; }
