--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ body {
   #pageThree .leftAbout {
     margin-bottom: 0; }
     #pageThree .leftAbout .logoAbout {
-      margin-top: 5em; }
+      margin-top: 30px; }
       #pageThree .leftAbout .logoAbout img {
         max-width: 20vh; }
   #pageThree h1 {
@@ -270,12 +270,12 @@ body {
 
 #footer {
   width: 100%;
-  height: 35vh;
+  height: auto;
   overflow: hidden; }
   #footer .leftPanel {
     background: #1B2021;
     color: #fff;
-    height: 40vh;
+    height: auto;
     padding: 5vh 15vh 1em 3em; }
     #footer .leftPanel h4 {
       margin-bottom: 1em;
