--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -108,8 +108,7 @@
     padding-bottom: 0.1em;
     border-bottom: 2px solid #000;
     text-align: left;
-    width: 100%;
-    margin-top: 1em; }
+    width: 100%; }
 
 #carousel {
   background: #1B2021;
