--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,15 +161,9 @@ body {
           margin-top: 1.5em;
           font-size: 16px;
           background-color: #fff; }
-      #pageTwo #booking .bookingPanel .formBook {
-        margin-top: -1.5em;
-        display: flex;
-        justify-content: center;
-        align-items: center; }
         #pageTwo #booking .bookingPanel .formBook input[type=text] {
-          margin-top: 2em;
           border: 0;
-          margin-right: 2em;
+          width:100% !important;
           border: 1px solid #ccc;
           transition: border .35s ease-in-out;
           width: 100%; }
@@ -180,14 +174,23 @@ body {
         #pageTwo #booking .bookingPanel .formBook input[type=submit] {
           background: transparent;
           border: 1px solid #ccc;
-          margin-top: 2em;
+          margin-bottom: 10px;
           font-size: 1em;
+          margin-top: 25px;
           padding: 5px;
           width: 100%;
           transition: border .35s ease-in-out; }
         #pageTwo #booking .bookingPanel .formBook input[type=submit]:hover {
           border: 1px solid #000;
           cursor: pointer; }
+        #pageTwo #booking .bookingPanel .formBook #email {
+          width:48% !important;
+          float: left;
+          margin-right:4%}
+        #pageTwo #booking .bookingPanel .formBook #class {
+          width:48% !important;
+          float: left;
+        }
 
 #pageThree {
   width: 100%;
@@ -201,7 +204,7 @@ body {
   #pageThree .leftAbout {
     margin-bottom: 0; }
     #pageThree .leftAbout .logoAbout {
-      margin-top: 30px; }
+      margin-top: 5em; }
       #pageThree .leftAbout .logoAbout img {
         max-width: 20vh; }
   #pageThree h1 {
@@ -270,12 +273,12 @@ body {
 
 #footer {
   width: 100%;
-  height: auto;
+  height: 35vh;
   overflow: hidden; }
   #footer .leftPanel {
     background: #1B2021;
     color: #fff;
-    height: auto;
+    height: 40vh;
     padding: 5vh 15vh 1em 3em; }
     #footer .leftPanel h4 {
       margin-bottom: 1em;
