--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -98,6 +98,7 @@
   font-weight: 300; }
   #packages .packageImage {
     margin-left: 3em;
+    margin-top:20px;
     height: 30vh;
     width: 40vh;
     background: url("../images/bedAbout.jpg"); }
@@ -105,20 +106,23 @@
     font-size: 42px;
     font-weight: 400;
     padding-left: 0.2em;
+    text-align: left;
     padding-bottom: 0.1em;
     border-bottom: 2px solid #000;
-    width: 100%;
-    margin-top: 1em; }
+    width: 100%; }
 
 #carousel {
   background: #1B2021;
-  height: auto;
+  height: 500px;
   padding: 2em 0 2em 0; }
+  #carousel #imgCarousel {
+    height:100%;
+  }
   #carousel .carousel-inner {
-    height: auto; }
+    height: 100%; }
     #carousel .carousel-inner img {
-      height: 100%;
-      width: 100%; }
+        max-width:100%;
+       }
 
 /* ----------------------------
 ---- ByteForce Indonesia ------
