--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -113,16 +113,14 @@
 
 #carousel {
   background: #1B2021;
-  height: 500px;
-  padding: 2em 0 2em 0; }
-  #carousel #imgCarousel {
-    height:100%;
+  height: 400px;
+  padding: 2em 50px 2em 50px; }
+  #carousel div {
+    width:100%;
+    height: 100%;
+    background-size: cover !important;
+    float: left;
   }
-  #carousel .carousel-inner {
-    height: 100%; }
-    #carousel .carousel-inner img {
-        max-width:100%;
-       }
 
 /* ----------------------------
 ---- ByteForce Indonesia ------
@@ -204,6 +202,18 @@
   #touristAttraction button .slick-prev, #touristAttraction button .slick-next, #touristAttraction button .slick-arrow {
     color: #000;
     background: #000; }
+.slick-prev:before, .slick-next:before {
+  color:black !important;
+  font-size:30px !important;
+}
+
+.slick-prev:before {
+  margin-right: 10px;
+}
+
+.slick-next:before {
+  margin-left: 10px;
+}
 
 #scattered {
   padding-top: -10em;
@@ -378,7 +388,7 @@ body {
   font-family: 'helvetica'; }
 
 p {
-  font-size: 14px; }
+  font-size: 16px; }
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
@@ -462,7 +472,7 @@ p {
   #footer .leftPanel {
     background: #1B2021;
     color: #fff;
-    height: 100%;
+    height: auto;
     padding: 5vh 15vh 1em 3em; }
     #footer .leftPanel h4 {
       margin-bottom: 1em;
@@ -481,7 +491,7 @@ p {
       font-weight: 300; }
     #footer .rightPanel p {
       font-size: 14px;
-      font-weight: 40; }
+      font-weight: 400; }
     #footer .rightPanel a {
       text-decoration: none;
       color: #fff !important;
