--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -130,6 +130,45 @@
     float: left;
   }
 
+  /*
+  Contact Us
+   */
+
+.contactus{
+  padding: 50px 0 40px 0;
+}
+  .contactus h1{
+    font-weight: 300;
+    font-size:48px;
+  }
+  .contactus .row{
+    margin-bottom: 25px;
+  }
+  .contactus .form-btn {
+    width:100%;
+    padding:10px;
+    background: rgba(0,0,0,0);
+    border: 2px solid #660000;
+    transition: all .3s ease-in-out;
+  }
+  .contactus .form-btn:hover{
+    background: #660000;
+    cursor: pointer;
+    color: #fff;
+  }
+  .contactus .submit-btn{
+    background:rgba(102,0,0,1);
+    color:#fff;
+  }
+  .contactus .submit-btn:hover{
+    background:#1B2021;
+    border: 2px solid #1B2021;
+  }
+
+  .contactus .alert{
+    margin-bottom: 40px;
+  }
+
 /* ----------------------------
 ---- ByteForce Indonesia ------
 ------ Grand ABE's Website -------
