Job Offers Done!

--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -505,6 +505,8 @@ p {
     #navigation #navbar ul li .active a {
       color: #fff; }
 
+    #headerJobsa
+
 #firstPage {
   position: relative;
   width: 100%;
