--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -505,19 +505,22 @@ p {
     #navigation #navbar ul li .active a {
       color: #fff; }
 
-    #headerJobsa
 
 #firstPage {
   position: relative;
   width: 100%;
+  height: 600px;
   overflow: hidden;
-  color: #fff;
-  transition: 0s linear;
-  transition-property: background-position; }
+  color: #fff; }
+
   #firstPage #parallax {
-    background: url("../images/home_large.jpg");
-    background-size: cover;
-    height: 600px; }
+      background: url("../images/home_large.jpg");
+      background-size: cover;
+      height: 100%;
+      width: 100%;
+      z-index: -1000;
+      position: absolute;
+      top: 0;  }
 
 #footer {
   width: 100%;
