--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,21 @@ P
   .fixed a {
     color: #000 !important; }
 
+#top-bar {
+  position: relative;
+  top:0;
+  left:0;
+  width:100%;
+  height:60px;
+  padding-top: 15px;
+  background: #ccc;
+}
+
+#top-bar .input-top {
+  float:left;
+  margin-left: 20px;
+}
+
 #navigation {
   position: absolute;
   top: 550px;
